Adicionadas classes DTO, Controllers e Implementações de algumas interfaces